--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,7 @@ events {
 		# multi_accept on;
 }
 http {
-		#allow larger uploaders
+		#allow larger uploads
 		client_max_body_size 80M;
 		sendfile on;
 		tcp_nopush on;
